--- a/laravel-project/laravel-app/package.json
+++ b/laravel-project/laravel-app/package.json
@@ -18,5 +18,8 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.4.11"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.14.5"
     }
 }
